--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,6 @@
     android:onClick="zeroBTN"
     tools:context=".MainActivity">
 
-
     <EditText
         android:id="@+id/output"
         android:layout_width="0dp"
@@ -40,6 +39,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -349,6 +349,7 @@
             android:textColor="#000000"
             app:layout_constraintStart_toEndOf="@+id/parenthesisBTN"
             app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
@@ -357,12 +358,16 @@
         android:layout_width="0dp"
         android:layout_height="55dp"
         android:layout_margin="5dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
         android:layout_weight="1"
         android:background="@drawable/circle"
         android:text="Data"
         android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
